[package]
name = "rethink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1", features = ["highlighter", "debug", "tokio"] }


tokio = { version = "*", features = ["fs", "rt"] }

rfd = { version = "*" }
